--- a/.github/workflows/appdome.yml
+++ b/.github/workflows/appdome.yml
@@ -8,14 +8,13 @@ on:
 jobs:
   appdome:
     runs-on: ubuntu-latest
-#    "bitbar" "browserstack" "lambdatest" "saucelabs" "perfecto" "tosca" "aws_device_farm" "firebase" "kobiton" "None"
     steps:
       - name: Appdome build-2secure
         uses: Appdome/github_build-2secure@latest
         with:
           APPDOME_API_TOKEN: ${{secrets.APPDOME_API_KEY}}
-          TEAM_ID: ${{secrets.TEAM_ID}}
-          APP_FILE: ${{ github.workspace }}/app/release/app-release.aab # default is None
+          TEAM_ID: ${{secrets.TEAM_ID}} # Your team id in appdome
+          APP_FILE: https://github.com/gleidsonlm/android_business_card/raw/refs/heads/master/app/release/app-release.aab # none_protected_application can be pass as path/on/repository OR https://download_link
           FUSION_SET_ID: ${{secrets.FUSION_SET_ID}} #"Appdome Fusion Set_Id Android/iOS"
           SIGN_OPTIONS: "SIGN_ON_APPDOME"
           BUILD_WITH_LOGS: true # Optional
