--- a/.github/workflows/appdome.yml
+++ b/.github/workflows/appdome.yml
@@ -1,22 +1,40 @@
-name: Appdome build-2secure
+# This is a basic workflow for integrating appdome-api-python with your github project
+# File location should be under .github/workflows/
+name: Appdome Workflow
+
+# Potential fix for Workflow does not contain permissions
 permissions:
   contents: read
+
+# Controls when the workflow will run
 on:
+  # Triggers the workflow on push or pull request events but only for the "main" branch
   pull_request:
     branches:
     - main
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  # A demo job that builds an application to use with appdome
   appdome:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+        with:
+          path: main
+          
       - name: Appdome build-2secure
         uses: Appdome/github_build-2secure@latest
         with:
           APPDOME_API_TOKEN: ${{secrets.APPDOME_API_KEY}}
           TEAM_ID: ${{secrets.TEAM_ID}} # Your team id in appdome
-          APP_FILE: ${{github.workspace}}/app/release/app-release.apk # none_protected_application can be pass as path/on/repository OR https://download_link
+          APP_FILE: ${{github.workspace}}/app/build/outputs/bundle/release/app-release.aab # none_protected_application can be pass as path/on/repository OR https://download_link
           FUSION_SET_ID: ${{secrets.FUSION_SET_ID}} #"Appdome Fusion Set_Id Android/iOS"
           SIGN_OPTIONS: "SIGN_ON_APPDOME"
           BUILD_WITH_LOGS: true # Optional
