--- a/.github/workflows/appdome.yml
+++ b/.github/workflows/appdome.yml
@@ -47,7 +47,7 @@ jobs:
       # Run appdome api for Android apps
       - name: Appdome workflow for Android apps
         env: # creating needed environment variables using GitHub secrets
-          APPDOME_API_TOKEN: ${{secrets.APPDOME_API_KEY}}
+          APPDOME_API_TOKEN: ${{secrets.APPDOME_API_TOKEN}}
           TEAM_ID: ${{secrets.TEAM_ID}} # Your team id in appdome
           APP_FILE: ${{github.workspace}}/app/build/outputs/bundle/release/app-release.aab # none_protected_application can be pass as path/on/repository OR https://download_link
           FUSION_SET_ID: ${{secrets.FUSION_SET_ID}} #"Appdome Fusion Set_Id Android/iOS"
