--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,6 +24,11 @@ jobs:
         distribution: 'zulu'
         cache: gradle
     
+    - name: Load Google Service file
+      env:
+        GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
+        run: echo $GOOGLE_SERVICES_JSON | base64 -di > app/google-services.json
+    
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     
