--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,14 +2,14 @@ name: Android CI
 
 permissions:
   contents: write
-  
+
 on:
   push:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
   workflow_dispatch:
-  
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -17,24 +17,24 @@ jobs:
     - uses: actions/checkout@v4
       with: # path: main
         path: gleidsonlm-actions-android-build-1
-      
+
     - name: Setup Java JDK
       uses: actions/checkout@v4
-    
+
     - name: Azul Zulu OpenJDK
       uses: actions/setup-java@v4
       with:
         java-version: '21'
         distribution: 'zulu'
         cache: gradle
-    
+
     - name: Load Google Service file
       env:
         GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
-        run: echo $GOOGLE_SERVICES_JSON | base64 -di > ${{ github.workspace }}/app/google-services.json
-    
+      run: echo "$GOOGLE_SERVICES_JSON" | base64 -d > ${{ github.workspace }}/app/google-services.json
+
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
-    
+
     - name: Build with Gradle
       run: ./gradlew build
