fix: removing signing logic from local, it will be handled by Appdome
Signed-off-by: Gleidson Medeiros <gleidsonlm@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,8 @@
 .externalNativeBuild
 .cxx
 local.properties
+app/google-services.json
 app/appdome
 app/build
-app/debug
-app/google-services.json
 app/release
+app/keystore.jks
