--- a/.github/workflows/appdome.yml
+++ b/.github/workflows/appdome.yml
@@ -9,14 +9,39 @@ permissions:
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
+  push:
+    branches: [ "master" ]
   pull_request:
-    branches:
-    - main
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+    branches: [ "master" ]
+  workflow_dispatch:  # Allows you to run this workflow manually from the Actions tab
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+      with: # path: main
+        path: gleidsonlm-actions-android-build-1
+
+    - name: Azul Zulu OpenJDK
+      uses: actions/setup-java@v4
+      with:
+        java-version: '21'
+        distribution: 'zulu'
+        cache: gradle
+
+    - name: Load Google Service file
+      env:
+        GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
+      run: echo "$GOOGLE_SERVICES_JSON" | base64 -d > ${{ github.workspace }}/app/google-services.json
+
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+
+    - name: Build with Gradle
+      run: ./gradlew bundle
+
   # A demo job that builds an application to use with appdome
   appdome:
     # The type of runner that the job will run on
@@ -27,13 +52,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
         with:
-          path: main
-
-          
-      # Debug
-      - name: Debug - List files in the output directory
-        run: find ${{github.workspace}}/app/build/ -type d
-
+          path: gleidsonlm-actions-android-build-1
 
       # Preparing the Keystore file from GitHub secrets
       - name: Keystore file provision
