--- a/.github/workflows/appdome.yml
+++ b/.github/workflows/appdome.yml
@@ -4,44 +4,19 @@ name: Appdome Workflow
 
 # Potential fix for Workflow does not contain permissions
 permissions:
-  contents: read
+  contents: write
 
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+  # push:
+  #   branches: [ "master" ]
+  # pull_request:
+  #   branches: [ "master" ]
   workflow_dispatch:  # Allows you to run this workflow manually from the Actions tab
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-      with: # path: main
-        path: gleidsonlm-actions-android-build-1
-
-    - name: Azul Zulu OpenJDK
-      uses: actions/setup-java@v4
-      with:
-        java-version: '21'
-        distribution: 'zulu'
-        cache: gradle
-
-    - name: Load Google Service file
-      env:
-        GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
-      run: echo "$GOOGLE_SERVICES_JSON" | base64 -d > ${{ github.workspace }}/app/google-services.json
-
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-
-    - name: Build with Gradle
-      run: ./gradlew bundle
-
   # A demo job that builds an application to use with appdome
   appdome:
     # The type of runner that the job will run on
@@ -54,15 +29,33 @@ jobs:
         with:
           path: gleidsonlm-actions-android-build-1
 
+      # Set up Java OpenJDK 21 with gradle cache          
+      - name: Azul Zulu OpenJDK
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'zulu'
+          cache: gradle
+
+      # Provision the Google Services Json
+      - name: Load Google Service file
+        env:
+          GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
+        run: echo "$GOOGLE_SERVICES_JSON" | base64 -d > ${{ github.workspace }}/app/google-services.json
+
+      # Build bundle *.aab file with Gradle
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: Build bundle with Gradle
+        run: ./gradlew bundle
+
       # Preparing the Keystore file from GitHub secrets
       - name: Keystore file provision
         run: |
           echo "Keystore file provision"
           printf "%s" "${{ secrets.KEYSTORE_BASE64 }}" > ${{ github.workspace }}/keystore_base64
           base64 -d < ${{ github.workspace }}/keystore_base64 > ${{ github.workspace }}/keystore.jks
-
-      # Downloading the bundle file from GitHub
-      
+    
       # Cloning appdome-api-python github repository
       - name: Cloning appdome-api-python GitHub repository
         uses: actions/checkout@master
