--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -4,22 +4,21 @@ permissions:
   contents: write
 
 on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+    
     - uses: actions/checkout@v4
       with: # path: main
         path: gleidsonlm-actions-android-build-1
 
     - name: Setup Java JDK
       uses: actions/checkout@v4
+      with:
+        path: gleidsonlm-actions-android-build-1
 
     - name: Azul Zulu OpenJDK
       uses: actions/setup-java@v4
@@ -31,7 +30,9 @@ jobs:
     - name: Load Google Service file
       env:
         GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
-      run: echo "$GOOGLE_SERVICES_JSON" | base64 -d > ${{ github.workspace }}/app/google-services.json
+      run: |
+        printf "%s" "${{ secrets.GOOGLE_SERVICES_JSON }}" > ${{ github.workspace }}/app/google-services-base64
+        base64 -d < ${{ github.workspace }}/app/google-services-base64 > ${{ github.workspace }}/app/google-services.json
 
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
