--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -11,16 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     
-    - uses: actions/checkout@v4
-      with: # path: main
-        path: gleidsonlm-actions-android-build-1
-
-    - name: Setup Java JDK
+    - name: Checkout repo code for ${{github.workspace}}
       uses: actions/checkout@v4
-      with:
-        path: gleidsonlm-actions-android-build-1
 
-    - name: Azul Zulu OpenJDK
+    - name: Setup Java OpenJDK 21
       uses: actions/setup-java@v4
       with:
         java-version: '21'
@@ -31,6 +25,8 @@ jobs:
       env:
         GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
       run: |
+        touch ${{ github.workspace }}/app/google-services-base64
+        touch ${{ github.workspace }}/app/google-services.json
         printf "%s" "${{ secrets.GOOGLE_SERVICES_JSON }}" > ${{ github.workspace }}/app/google-services-base64
         base64 -d < ${{ github.workspace }}/app/google-services-base64 > ${{ github.workspace }}/app/google-services.json
 
