--- a/.github/workflows/appdome-build2secure.yml
+++ b/.github/workflows/appdome-build2secure.yml
@@ -71,7 +71,7 @@ jobs:
           FUSION_SET_ID: ${{secrets.FUSION_SET_ID}} # Appdome Fusion Set_Id Android
           SIGN_OPTIONS: "SIGN_ON_APPDOME"
           BUILD_WITH_LOGS: true - Optional
-          KEYSTORE_FILE: ${{github.workspace}}/keystore.jks
+          KEYSTORE_FILE: ${{ secrets.KEYSTORE_BASE64 }}
           KEYSTORE_PASSWORD: ${{secrets.KEYSTORE_PASSWORD}}
           KEYSTORE_ALIAS: ${{secrets.KEYSTORE_ALIAS}}
           KEYSTORE_KEY_PASSWORD: ${{secrets.KEYSTORE_KEY_PASSWORD}}
