--- a/.github/workflows/appdome-build2secure.yml
+++ b/.github/workflows/appdome-build2secure.yml
@@ -48,30 +48,30 @@ jobs:
       # Build bundle *.aab file with Gradle
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      - name: Gradle build
-        run: ./gradlew build
+
       - name: Generate bundle *.aab file
         run: ./gradlew bundle
 
-
-      # Preparing the Keystore file from GitHub secrets
-      - name: Keystore file provision
-        run: |
-          echo "Keystore file provision"
-          printf "%s" "${{ secrets.KEYSTORE_BASE64 }}" > ${{ github.workspace }}/keystore_base64
-          base64 -d < ${{ github.workspace }}/keystore_base64 > ${{ github.workspace }}/keystore.jks
-
       # Appdome Build-2secure action https://github.com/marketplace/actions/appdome-build-2secure
+      # https://www.appdome.com/how-to/devsecops-automation-mobile-cicd/mobile-app-security-anti-fraud-cicd/use-appdomes-github-action/
       - name: Appdome build-2secure
         uses: Appdome/github_build-2secure@latest
         with:
-          APPDOME_API_TOKEN: ${{secrets.APPDOME_API_TOKEN}} # Appdome API key
-          TEAM_ID: ${{secrets.TEAM_ID}} # Your team id in appdome
-          APP_FILE: ${{github.workspace}}/app/build/outputs/bundle/release/app-release.aab # Generated at #48
-          FUSION_SET_ID: ${{secrets.FUSION_SET_ID}} # Appdome Fusion Set_Id Android
+          # APPDOME_API_TOKEN: ${{secrets.APPDOME_API_TOKEN}} # Appdome API key
+          # TEAM_ID: ${{secrets.TEAM_ID}} # Your team id in appdome
+          # APP_FILE: ${{github.workspace}}/app/build/outputs/bundle/release/app-release.aab # Generated at #48
+          # FUSION_SET_ID: ${{secrets.FUSION_SET_ID}} # Appdome Fusion Set_Id Android
+          # SIGN_OPTIONS: "SIGN_ON_APPDOME"
+          # BUILD_WITH_LOGS: true - Optional
+          # KEYSTORE_FILE: ${{ secrets.KEYSTORE_BASE64 }}
+          # KEYSTORE_PASSWORD: ${{secrets.KEYSTORE_PASSWORD}}
+          # KEYSTORE_ALIAS: ${{secrets.KEYSTORE_ALIAS}}
+          # KEYSTORE_KEY_PASSWORD: ${{secrets.KEYSTORE_KEY_PASSWORD}}
+          APP_FILE: ${{ github.workspace }}/app/build/outputs/bundle/release/app-release.aab
+          FUSION_SET_ID: ${{ secrets.TEAM_ID }}
           SIGN_OPTIONS: "SIGN_ON_APPDOME"
-          BUILD_WITH_LOGS: true - Optional
+          APPDOME_API_TOKEN: ${{ secrets.APPDOME_API_TOKEN }}
           KEYSTORE_FILE: ${{ secrets.KEYSTORE_BASE64 }}
-          KEYSTORE_PASSWORD: ${{secrets.KEYSTORE_PASSWORD}}
-          KEYSTORE_ALIAS: ${{secrets.KEYSTORE_ALIAS}}
-          KEYSTORE_KEY_PASSWORD: ${{secrets.KEYSTORE_KEY_PASSWORD}}
+          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+          KEYSTORE_ALIAS: ${{ secrets.KEYSTORE_ALIAS }}
+          KEYSTORE_KEY_PASSWORD: ${{ secrets.KEYSTORE_KEY_PASSWORD }}
