--- a/.github/workflows/appdome-build2secure.yml
+++ b/.github/workflows/appdome-build2secure.yml
@@ -57,21 +57,11 @@ jobs:
       - name: Appdome build-2secure
         uses: Appdome/github_build-2secure@latest
         with:
-          # APPDOME_API_TOKEN: ${{secrets.APPDOME_API_TOKEN}} # Appdome API key
-          # TEAM_ID: ${{secrets.TEAM_ID}} # Your team id in appdome
-          # APP_FILE: ${{github.workspace}}/app/build/outputs/bundle/release/app-release.aab # Generated at #48
-          # FUSION_SET_ID: ${{secrets.FUSION_SET_ID}} # Appdome Fusion Set_Id Android
-          # SIGN_OPTIONS: "SIGN_ON_APPDOME"
-          # BUILD_WITH_LOGS: true - Optional
-          # KEYSTORE_FILE: ${{ secrets.KEYSTORE_BASE64 }}
-          # KEYSTORE_PASSWORD: ${{secrets.KEYSTORE_PASSWORD}}
-          # KEYSTORE_ALIAS: ${{secrets.KEYSTORE_ALIAS}}
-          # KEYSTORE_KEY_PASSWORD: ${{secrets.KEYSTORE_KEY_PASSWORD}}
-          APP_FILE: ${{ github.workspace }}/app/build/outputs/bundle/release/app-release.aab
-          FUSION_SET_ID: ${{ secrets.TEAM_ID }}
+          APP_FILE: "${{ github.workspace }}/app/build/outputs/bundle/release/app-release.aab"
+          FUSION_SET_ID: "${{ secrets.TEAM_ID }}"
           SIGN_OPTIONS: "SIGN_ON_APPDOME"
-          APPDOME_API_TOKEN: ${{ secrets.APPDOME_API_TOKEN }}
-          KEYSTORE_FILE: ${{ secrets.KEYSTORE_BASE64 }}
-          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
-          KEYSTORE_ALIAS: ${{ secrets.KEYSTORE_ALIAS }}
-          KEYSTORE_KEY_PASSWORD: ${{ secrets.KEYSTORE_KEY_PASSWORD }}
+          APPDOME_API_TOKEN: "${{ secrets.APPDOME_API_TOKEN }}"
+          KEYSTORE_FILE: "${{ secrets.KEYSTORE_BASE64 }}"
+          KEYSTORE_PASSWORD: "${{ secrets.KEYSTORE_PASSWORD }}"
+          KEYSTORE_ALIAS: "${{ secrets.KEYSTORE_ALIAS }}"
+          KEYSTORE_KEY_PASSWORD: "${{ secrets.KEYSTORE_KEY_PASSWORD }}"
