--- a/.github/workflows/appdome-build2secure.yml
+++ b/.github/workflows/appdome-build2secure.yml
@@ -66,7 +66,7 @@ jobs:
         uses: Appdome/github_build-2secure@latest
         with:
           APP_FILE: "${{ github.workspace }}/app/build/outputs/bundle/release/app-release.aab"
-          FUSION_SET_ID: "${{ FUSION_SET_ID }}"
+          FUSION_SET_ID: "${{ secrets.FUSION_SET_ID }}"
           SIGN_OPTIONS: "SIGN_ON_APPDOME"
           APPDOME_API_TOKEN: "${{ secrets.APPDOME_API_TOKEN }}"
           KEYSTORE_FILE: "${{ github.workspace }}/keystore.jks"
