--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,11 +2,12 @@ trigger:
 - main
 
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: 'macos-15'
 
 variables:
   buildDir: '$(Build.SourcesDirectory)'
   appDir: '$(buildDir)/app'
+  outputAab: '$(appDir)/build/outputs/bundle/debug/app-debug.aab'
 
 steps:
 
@@ -16,7 +17,7 @@ steps:
   inputs:
     secureFile: 'google-services.json'
 
-# Copy the file to the correct location
+# Copy google-services.json to app directory
 - script: |
     cp $(DownloadGoogleServices.secureFilePath) $(appDir)/google-services.json
   displayName: 'Copy google-services.json to app directory'
@@ -40,3 +41,26 @@ steps:
     targetPath: '$(outputAab)'
     artifact: 'android-business-card-aab'
     publishLocation: 'pipeline'
+
+# Download keystore file from Secure Files
+- task: DownloadSecureFile@1
+  name: DownloadKeystore
+  inputs:
+    secureFile: 'AppdomeLabs-Android-Signing.jks'
+
+# Protect and sign the AAB with Appdome Build-2Secure
+
+- task: Build-2Secure@0
+  displayName: 'Protect and Sign AAB with Appdome'
+  inputs:
+    Platform: 'android'
+    Sign: 'signOnAppdome'
+    App: '$(outputAab)'
+    Token: '$(APPDOME_API_TOKEN)'
+    FusionSetId: '$(APPDOME_FUSION_SET_ID)'
+    OutputFileName: 'android-business-card-protected'
+    KeystoreFile: 'AppdomeLabs-Android-Signing.jks'
+    KeystorePass: '$(APPDOME_SIGN_KEYSTORE_PASSWORD)'
+    KeystoreAlias: '$(APPDOME_SIGN_KEY_ALIAS)'
+    KeyPass: '$(APPDOME_SIGN_KEY_PASSWORD)'
+    BuildWithLogs: true
